Showing blue background for row selected in HotelSearchResults & RoomsAvailable List
Summary: resetting comment in ids.xml

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D288

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -348,4 +348,6 @@
     <attr name="tabletRibbonRateQualifierTextColor" format="reference"/>
     <attr name="actionBarTabletGuestCountTextColor" format="reference"/>
 
+    <attr name="tabletSelectedRowBackground" format="reference"/>
+
 </resources>
