--- a/project/res/layout/fragment_checkout_traveler_button.xml
+++ b/project/res/layout/fragment_checkout_traveler_button.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
@@ -14,27 +13,16 @@
 
         <FrameLayout
             android:id="@+id/traveler_section_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:visibility="gone" />
 
         <FrameLayout
             android:id="@+id/empty_traveler_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/valid_indicator_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:visibility="gone" >
-
-        <!-- TODO: We need to put the form validity indicator here -->
-
     </FrameLayout>
 
 </LinearLayout>
