Changing app support URL. Enable phone, email and website for contact travelocity.
Summary:
Adding itin=true param to support URL. Otherwise it opens a popup in webview.
Enable email, phone and website for Contact travelocity. Waiting for correct email id for travelocity.

Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D312

(cherry picked from commit b39ec0bdb2ae33b2cc52fc02f6c768ecda681382)

Conflicts:
	project/res/values/attrs.xml
	project/res/values/themes.xml
	project/res_travelocity/values/themes.xml
	project/src/com/expedia/bookings/activity/AboutActivity.java

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -472,4 +472,7 @@
     <attr name="hotelConfirmationPlaceholderDrawable" format="reference" />
     <attr name="couponSuccessMessageColor" fomrat="reference|color"/>
 
+    <attr name="infoContactUsString" format="reference|string"/>
+    <attr name="infoContactEmailSubjectString" format="reference|string"/>
+
 </resources>
