Changing app support URL. Enable phone, email and website for contact travelocity.
Summary:
Adding itin=true param to support URL. Otherwise it opens a popup in webview.
Enable email, phone and website for Contact travelocity. Waiting for correct email id for travelocity.

Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D312

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -350,4 +350,7 @@
 
     <attr name="tabletSelectedRowBackground" format="reference"/>
 
+    <attr name="infoContactUsString" format="reference|string"/>
+    <attr name="infoContactEmailSubjectString" format="reference|string"/>
+
 </resources>
