--- a/project/res/layout/section_flight_leg_tablet_blue_card.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card.xml
@@ -2,7 +2,7 @@
 <com.expedia.bookings.section.FlightLegSummarySectionTablet xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="@dimen/tablet_tripbucket_card_height"
     android:background="@drawable/bg_flight_summary_row_tablet"
     android:paddingBottom="6dp"
     android:paddingLeft="12dp"
