--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -2,7 +2,7 @@
 <com.expedia.bookings.section.HotelSummarySection xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mobiata="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="@dimen/tablet_tripbucket_card_height"
     android:background="@color/tablet_white_pane_bg"
     android:paddingBottom="6dp"
     android:paddingLeft="12dp"
