AMEX CVV UI tweaks on phone

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -35,6 +35,10 @@
 
     <!-- Tablet checkout -->
     <dimen name="trip_bucket_expanded_card_padding">2dp</dimen>
+    <dimen name="cvv_text_view_right_margin_amex">20dp</dimen>
+    <dimen name="cvv_text_view_right_margin_other">82dp</dimen>
+    <dimen name="cvv_text_view_top_margin_amex">-10dp</dimen>
+    <dimen name="cvv_text_view_top_margin_other">-15dp</dimen>
 
     <!-- Launch dimens -->
     <dimen name="launch_tile_space_width">2dp</dimen>
