--- a/project/res/layout/fragment_cvv_entry.xml
+++ b/project/res/layout/fragment_cvv_entry.xml
@@ -37,8 +37,8 @@
             android:layout_width="84dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="82dp"
-            android:layout_marginTop="-15dp"
+            android:layout_marginRight="@dimen/cvv_text_view_right_margin_other"
+            android:layout_marginTop="@dimen/cvv_text_view_top_margin_other"
             android:background="@drawable/div_cvv"
             android:freezesText="true"
             android:gravity="center_horizontal"
