--- a/project/res/layout/section_credit_card.xml
+++ b/project/res/layout/section_credit_card.xml
@@ -14,8 +14,9 @@
     <com.larvalabs.svgandroid.widget.SVGView
         android:id="@+id/svg_amex_logo"
         android:layout_width="match_parent"
-        android:layout_height="21dp"
+        android:layout_height="18dp"
         android:layout_marginTop="22dp"
+        android:layout_marginRight="64dp"
         android:alpha=".7"
         app:src="@raw/american_express_logo"
         app:zoomMode="fitHeight" />
@@ -23,8 +24,9 @@
     <com.larvalabs.svgandroid.widget.SVGView
         android:id="@+id/svg_amex_head"
         android:layout_width="match_parent"
-        android:layout_height="118dp"
+        android:layout_height="109dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="64dp"
         android:alpha=".1"
         app:src="@raw/ic_amex_head"
         app:zoomMode="fitHeight" />
@@ -34,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-22dp"
+        android:layout_marginRight="64dp"
         android:gravity="center"
         android:alpha=".7"
         android:textColor="@android:color/white"
@@ -44,10 +47,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="16dp"
         android:alpha=".2"
         android:text="@string/Member"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         app:textStyle="bold"/>
 
     <com.expedia.bookings.widget.TextView
@@ -56,8 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:alpha=".7"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="21dp"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         app:textStyle="bold"/>
 
     <!-- Views to display the BACK of the card; for all cards other than AMEX -->
