--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -75,12 +75,40 @@
     </com.expedia.bookings.widget.FrameLayoutTouchController>
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
-        android:id="@+id/widget_container"
+        android:id="@+id/bottom_center_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <View
-            android:id="@+id/widget_container_bg"
+            android:id="@+id/bottom_center_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF" />
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/gde_container"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- TODO: REMOVE THIS TextView, and attach a fragment to this container instead -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="GDE STUFF" />
+
+        </com.expedia.bookings.widget.FrameLayoutTouchController>
+
+    </com.expedia.bookings.widget.FrameLayoutTouchController>
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/bottom_right_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/bottom_right_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#FFFFFF" />
