--- a/project/res/layout/fragment_checkout_payment_button.xml
+++ b/project/res/layout/fragment_checkout_payment_button.xml
@@ -99,6 +99,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:paddingTop="2.5dp"
+        android:paddingBottom="5.5dp"
+        android:paddingLeft="4dp"
         app:cardIcon="@drawable/ic_tablet_checkout_generic_credit_card" />
 
 </LinearLayout>
