--- a/project/res/layout/snippet_tablet_map_hotel_info_window.xml
+++ b/project/res/layout/snippet_tablet_map_hotel_info_window.xml
@@ -13,11 +13,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="320dp"
             android:orientation="horizontal" >
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:paddingBottom="20dp"
                 android:paddingLeft="25dp"
