--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -15,7 +15,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Baggage fee WebView container -->
+
         <LinearLayout
+            android:id="@+id/baggage_fee_card_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/fees_container"
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/baggage_fee_header"
+                style="@style/V2.Widget.TextView.FlightDetailsHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_flight_details_tablet_grey_top"
+                android:drawableLeft="?android:homeAsUpIndicator"
+                android:paddingBottom="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="@dimen/tablet_flight_details_horizontal_padding"
+                android:paddingTop="16dp" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_flight_details_tablet_white_bottom"
+                android:paddingBottom="2dp">
+
+                <FrameLayout
+                    android:id="@+id/baggage_fee_web_view_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </ScrollView>
+
+        </LinearLayout>
+
+        <!-- Flight details card -->
+
+        <LinearLayout
+            android:id="@+id/flight_card_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/fees_container"
@@ -34,13 +73,11 @@
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/details_time_header"
+                    style="@style/V2.Widget.TextView.FlightDetailsHeader"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:textColor="#333"
-                    android:textSize="20sp"
-                    app:textStyle="light" />
+                    android:layout_centerVertical="true" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/details_add_trip_button"
@@ -149,6 +186,8 @@
             </ScrollView>
 
         </LinearLayout>
+
+        <!-- Baggage fee link TextView(s) -->
 
         <include
             android:layout_width="match_parent"
