--- a/project/res/layout/include_flight_details_baggage_fees.xml
+++ b/project/res/layout/include_flight_details_baggage_fees.xml
@@ -20,6 +20,7 @@
             android:drawablePadding="5dp"
             android:gravity="center"
             android:text="@string/baggage_fee_info"
+            android:textAllCaps="true"
             android:textColor="#CCCCCC"
             android:textSize="12dp"
             android:textStyle="bold" />
