--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -158,6 +158,12 @@
 
     <style name="V2.Widget.TextView" />
 
+    <style name="V2.Widget.TextView.FlightDetailsHeader">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#333</item>
+        <item name="textStyle">light</item>
+    </style>
+
     <style name="V2.Widget.TextView.FilterTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
