Selected cell on calendar dialog was coming as expedia yellow. Fixed it.
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D321

--- a/project/res/layout/fragment_dialog_calendar.xml
+++ b/project/res/layout/fragment_dialog_calendar.xml
@@ -14,7 +14,7 @@
         mobiata:drawGridLines="false"
         mobiata:calendarHeaderBackground="@color/calendar_header"
         mobiata:nextMonthBackground="@drawable/bg_calendar_next"
-        mobiata:otherMonthCellBackground="@drawable/bg_calendar_cell_tablet"
+        mobiata:otherMonthCellBackground="?attr/calendarBackgroundCellDrawable"
         mobiata:otherMonthCellTextColor="@color/cell_text_other_month"
         mobiata:popupBackground="?attr/calendarDatePickerPopupDrawable"
         mobiata:previousMonthBackground="@drawable/bg_calendar_previous"
