Change book button text color for landscape mode.
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D325

(cherry picked from commit e83b024088d192e95bc9479ed663adcc5a9a50a7)

--- a/project/res/layout-land/hotel_details_main.xml
+++ b/project/res/layout-land/hotel_details_main.xml
@@ -69,7 +69,8 @@
                         android:layout_height="wrap_content"
                         android:background="?attr/loginBookNowButtonDrawable"
                         android:text="?attr/hotelBookButtonString"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textColor="?attr/hotelBookButtonColor"/>
 
                     <Button
                         android:id="@+id/book_by_phone_button"
