This is the first of the tablet dateless search commits.
When we land on the results screen, we kick off a search for tonight for hotels.
We display the calendar and gde results immediatly, and dont do any flight searches
until the user chooses a date.

We are still missing a bunch of stuff, such as updating the calendar when we click on gde
,being able to clear the search dates, better gde stuff in general, better loading states,
better error messages etc...

--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -18,6 +18,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <!-- FLIGHT LIST PLACEHOLDER FOR WHEN WE DONT HAVE ENOUGH FLIGHT DATA -->
+    <LinearLayout
+        android:id="@+id/missing_flight_info_container"
+        android:background="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="32dp"
+            android:gravity="center"
+            android:text="@string/missing_flight_info_header" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:gravity="center"
+            android:text="@string/missing_flight_info_message" />
+    </LinearLayout>
+
     <!-- CONTROLLER CONTAINERS -->
 
     <com.expedia.bookings.widget.FixedTranslationFrameLayout
@@ -35,11 +61,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- LOADING -->
-
-    <com.expedia.bookings.widget.FrameLayoutTouchController
-        android:id="@+id/loading_frag_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
