--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -299,6 +299,10 @@
     <dimen name="tablet_hotel_map_popup_thumbnail_height">126dp</dimen>
     <dimen name="tablet_hotel_map_popup_thumbnail_width">111dp</dimen>
 
+    <!-- Flight baggage fee stuff -->
+    <dimen name="flight_details_baggage_text_size">12sp</dimen>
+    <dimen name="tablet_flight_details_baggage_text_size">18sp</dimen>
+
     <!-- Credit card dimens phone -->
     <dimen name="credit_card_checkout_width">318dp</dimen>
     <dimen name="credit_card_checkout_height">219dp</dimen>
