--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -174,6 +174,7 @@
     <color name="details_ring_text">#4b556b</color>
     <color name="sliding_group_text_bright">#f4f5f7</color>
     <color name="sliding_group_text_dim">#4a4f54</color>
+    <color name="hotel_details_sticky_header_background">#4e4e52</color>
 
     <!-- Tablet flights -->
     <color name="tablet_flight_filter_text_color">#4c5156</color>
