--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -12,7 +12,7 @@
 
 
     <LinearLayout
-        android:id="@+id/search_bar_conatiner"
+        android:id="@+id/search_bar_container"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -93,7 +93,7 @@
 
     <FrameLayout
         android:id="@+id/suggestions_container"
-        android:layout_below="@id/search_bar_conatiner"
+        android:layout_below="@id/search_bar_container"
         android:background="#66000000"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
