--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -37,4 +37,21 @@
     <!-- adding tvly_hotel_error string id, to avoid errors in Expedia app compilation -->
     <item name="e3_error_hotel_offers_hotel_service_failure_tvly" type="string"/>
 
+    <!-- adding below ids. These are the images used in Tvly app home screen. -->
+    <item name="bg_launch_tvly_sf" type="drawable"/>
+    <item name="bg_launch_tvly_las_vegas" type="drawable"/>
+    <item name="bg_launch_tvly_london" type="drawable"/>
+    <item name="bg_launch_tvly_paris" type="drawable"/>
+    <item name="bg_launch_tvly_swiss" type="drawable"/>
+    <item name="bg_launch_tvly_japan" type="drawable"/>
+    <item name="bg_launch_tvly_rome" type="drawable"/>
+    <item name="bg_launch_tvly_venice" type="drawable"/>
+    <item name="bg_launch_tvly_seattle" type="drawable"/>
+    <item name="bg_launch_tvly_ny" type="drawable"/>
+    <item name="bg_launch_tvly_chicago" type="drawable"/>
+    <item name="bg_launch_tvly_china" type="drawable"/>
+    <item name="bg_launch_tvly_dallas" type="drawable"/>
+    <item name="bg_launch_tvly_arizona" type="drawable"/>
+    <item name="bg_launch_tvly_maldives" type="drawable"/>
+
  </resources>
