--- a/project/res_travelocity/layout/flight_loading_status.xml
+++ b/project/res_travelocity/layout/flight_loading_status.xml
@@ -5,6 +5,7 @@
         android:id="@+id/search_progress_flight_tvly"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:padding="60dp"
         android:src="@drawable/search_progress_static_flight_tvly" />
 
 </merge>
