--- a/project/res_travelocity/layout/include_hotel_search_progress_bar.xml
+++ b/project/res_travelocity/layout/include_hotel_search_progress_bar.xml
@@ -5,6 +5,8 @@
         android:id="@+id/search_progress_image_tvly"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_centerInParent="true"
+        android:padding="60dp"
         android:src="@drawable/search_progress_static_img_tvly" />
 
 </merge>
